--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,28 +11,37 @@ loaderVersion="[31,)" #mandatory This is typically bumped every Minecraft versio
 issueTrackerURL="http://my.issue.tracker/" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
+
 # The modid of the mod
 modId="chicken_elytra" #mandatory
+
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 version="${version}" #mandatory
+
  # A display name for the mod
 displayName="Chicken Elytra" #mandatory
+
 # A URL to query for updates for this mod. See the JSON update specification <here>
 updateJSONURL="http://myurl.me/" #optional
+
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="https://github.com/luisgs231/chicken_elytra" #optional
+
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="examplemod.png" #optional
+
 # A text field displayed in the mod UI
 credits="Thanks for this example mod goes to Java" #optional
+
 # A text field displayed in the mod UI
 authors="luisgs231" #optional
+
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-Elytra made if chickens.
+Elytra made of chickens.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.examplemod]] #optional
+[[dependencies.chicken_elytra]] #optional
     # the modid of the dependency
     modId="forge" #mandatory
     # Does this dependency have to exist - if not, ordering below must be specified
@@ -44,7 +53,7 @@ Elytra made if chickens.
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
 # Here's another dependency
-[[dependencies.examplemod]]
+[[dependencies.chicken_elytra]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.15.2]"
