--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -16,7 +16,7 @@ issueTrackerURL="http://my.issue.tracker/" #optional
 modId="chicken_elytra" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="${version}" #mandatory
+version='1.0.1'#"${version}" #mandatory
 
  # A display name for the mod
 displayName="Chicken Elytra" #mandatory
