--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -16,7 +16,7 @@ issueTrackerURL="http://my.issue.tracker/" #optional
 modId="chicken_elytra" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version='1.0.1'#"${version}" #mandatory
+version='1.1.2'#"${version}" #mandatory
 
  # A display name for the mod
 displayName="Chicken Elytra" #mandatory
@@ -40,7 +40,9 @@ authors="luisgs231" #optional
 description='''
 Now you can craft the Elytra with 6 chicken feathers. You can also craft two arrows with cobblestone, stick and feather.
 Gunpowder is also craftable using gravel, sand and coal.
+The Anvil will last forever now and no item will be "to expensive" anymore, the text "TO EXPENSIVE" will show anyways, until I find a way to remove it.
 '''
+#https://www.curseforge.com/minecraft/mc-mods/no-increasing-repair-cost
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.chicken_elytra]] #optional
     # the modid of the dependency
